Fixed overlap issue of add button

--- a/static/css/main-page.css
+++ b/static/css/main-page.css
@@ -39,6 +39,7 @@
   border-radius: 50%;
   background-color: var(--blue-dark);
   margin-right: 5px;
+  z-index: 1;
 }
 
 #inputbar span:hover{
